[gd_scene load_steps=3 format=3 uid="uid://dj578mtugchn3"]

[ext_resource type="LabelSettings" uid="uid://b73yi7bs12bt7" path="res://assets/styles/bold.tres" id="1_6l0xp"]
[ext_resource type="Script" uid="uid://cdb0hvdcwscsl" path="res://scenes/purchase_info/purchase_info.gd" id="1_llbff"]

[node name="PurchaseInfo" type="VBoxContainer"]
script = ExtResource("1_llbff")
metadata/_tab_index = 1

[node name="Name" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Turret Name"
label_settings = ExtResource("1_6l0xp")
horizontal_alignment = 1

[node name="Separator" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HSeparator" type="HSeparator" parent="Separator"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Cost" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Cost : "
label_settings = ExtResource("1_6l0xp")

[node name="CostValue" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "250"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Speed" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Speed : "
label_settings = ExtResource("1_6l0xp")

[node name="SpeedValue" type="Label" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "slow"

[node name="Separator2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HSeparator" type="HSeparator" parent="Separator2"]
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "So this is a long text, because I do need to know what it  looks when there is enough text in the box to display several lines. That's for testing purpose."
